# newDesign

./: 404.shtml  README.md  durgun.html  gonder.php  index.html  instant.php  iptal.php  isteme.php  kaynakca.txt  main.css  odendi.php  robots.txt  sec5.txt  secim2.php  web.txt  xjsfunc.txt
arsiv/: aglar.html  aglink.html  agteknik.html  ccode.html  cprep.html  crclrc.html  dea.html  etcsrv.html  fork.html  ilet.html  index.html  inetd.html  main.css  make.html  msgauth.html  recur.html  robots.html  sdlc.html  secure.html  seri.html  snalu0.html  snalu62.html  tcpip.html  tcpprg.html  unix.html  vi.html
bvd/: cdisc-odm1.html  cdisc-odm2.html  cdisc-odm2.txt  edifact.html  index.php  json.txt  mainx.css  midas.txt  s.html  sdxf.html  zvd.html
bvd/edival-0.1.8/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  aclocal.m4  config.h  config.status  configure  configure.in  libtool
bvd/edival-0.1.8/examples/: README  scan837.c  scan997.c  scanedi.c
bvd/edival-0.1.8/lib/: Makefile  Makefile.am  Makefile.in  common.c  common.h  common.lo  complextype.c  complextype.h  complextype.lo  edifactparser.c  edifactparser.h  edifactparser.lo  ediparse.c  ediparse.h  ediparse.lo  edival.h  hashtable.c  hashtable.h  hashtable.lo  libedival.la  schema.c  schema.h  schema.lo  simpletype.c  simpletype.h  simpletype.lo  statemachine.c  statemachine.h  statemachine.lo  x12parser.c  x12parser.h  x12parser.lo
bvd/edival-0.1.8/lib/.deps/: common.Plo  complextype.Plo  edifactparser.Plo  ediparse.Plo  hashtable.Plo  schema.Plo  simpletype.Plo  statemachine.Plo  x12parser.Plo
bvd/edival-0.1.8/lib/.libs/: libedival.lai  libedival.so.1.0.0
css/: cssverticalmenu.css
docs/: Baƒvuru Cevabì.doc  blog.html  bvd.html  (+11 more)
(+1198 files in other folders)
